~ wstęp do autoryzacji

--- a/application/views/layouts/login.phtml
+++ b/application/views/layouts/login.phtml
@@ -8,6 +8,11 @@
 	<?php echo $this->headScript(); ?>
 </head>
 <body>
-	<?php echo $this->layout()->content; ?>
+	<div>
+		<?php //echo $this->flashMessenger(); ?>
+	</div>
+	<div>
+		<?php echo $this->layout()->content; ?>
+	</div>
 </body>
 </html>
