--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,43 +1,28 @@
-<style>
-    a:link,
-    a:visited
-    {
-        color: #0398CA;
-    }
+<h2>Formularz logowania</h2>
+<form method="post" action="/">
 
-    span#zf-name
-    {
-        color: #91BE3F;
-    }
-
-    div#welcome
-    {
-        color: #FFFFFF;
-        background-image: url(http://framework.zend.com/images/bkg_header.jpg);
-        width:  600px;
-        height: 400px;
-        border: 2px solid #444444;
-        overflow: hidden;
-        text-align: center;
-    }
-
-    div#more-information
-    {
-        background-image: url(http://framework.zend.com/images/bkg_body-bottom.gif);
-        height: 100%;
-    }
-</style>
-<div id="welcome">
-    <h1>Welcome to the <span id="zf-name">Zend Framework!</span></h1>
-
-    <h3>This is your project's main page</h3>
-
-    <div id="more-information">
-        <p><img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" /></p>
-        <p>
-            Helpful Links: <br />
-            <a href="http://framework.zend.com/">Zend Framework Website</a> |
-            <a href="http://framework.zend.com/manual/en/">Zend Framework Manual</a>
-        </p>
-    </div>
-</div>
+	<?php $sField = 'email';
+	echo $this->formField(
+		'email',
+		$sField,
+		$this->formText($sField, $this->formValue($sField))
+	)?>
+	
+	<?php $sField = 'passwd';
+	echo $this->formField(
+		'hasło',
+		$sField,
+		$this->formPassword($sField, $this->formValue($sField))
+	)?>
+	
+	<?php $sField = 'remember';
+	echo $this->formField(
+		'Zapamiętaj mnie',
+		$sField,
+		$this->formCheckbox($sField, $this->formValue($sField)),
+		array('class' => 'remember'),
+		array('flip' => true)
+	)?>
+	
+	<button type="submit">zaloguj</button>
+</form>
