--- a/application/views/layouts/default.phtml
+++ b/application/views/layouts/default.phtml
@@ -3,11 +3,16 @@
 <head>
 	<title>Tinab</title>
 	<meta charset="utf-8" />
-	
+
 	<?php echo $this->headLink(); ?>
 	<?php echo $this->headScript(); ?>
 </head>
 <body>
-	<?php echo $this->layout()->content; ?>
+	<div>
+		<?php echo $this->flashMessenger(); ?>
+	</div>
+	<div>
+		<?php echo $this->layout()->content; ?>
+	</div>
 </body>
 </html>
