--- a/application/views/layouts/login.phtml
+++ b/application/views/layouts/login.phtml
@@ -3,13 +3,13 @@
 <head>
 	<title>Tinab</title>
 	<meta charset="utf-8" />
-	
+
 	<?php echo $this->headLink(); ?>
 	<?php echo $this->headScript(); ?>
 </head>
 <body>
 	<div>
-		<?php //echo $this->flashMessenger(); ?>
+		<?php echo $this->flashMessenger(); ?>
 	</div>
 	<div>
 		<?php echo $this->layout()->content; ?>
