--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -4,17 +4,17 @@
 	<title>Tinab</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" media="projection, screen" href="/css/tinab.css" />
-	<?php echo $this->headLink(); ?>
-	<?php echo $this->headScript(); ?>
 </head>
 <body>
-	<header>
-		<?php echo $this->mainPanel()?>
-	</header>
 	<div class="page-wrapper">
-		<?php echo $this->flashMessenger(); ?>
+		<div class="messenger msg-info">
+			sdasdasdsa
+		</div>
+		<div class="messenger msg-error">
+			sdasdasdsa
+		</div>
 		<div class="content-wrapper">
-			<?php echo $this->layout()->content; ?>
+			content
 		</div>
 	</div>
 </body>
