--- a/application/views/layouts/login.phtml
+++ b/application/views/layouts/login.phtml
@@ -8,7 +8,7 @@
 <body>
 	<div class="page-wrapper">
 		<?php echo $this->flashMessenger(); ?>
-		<div class="content-wrapper">
+		<div class="<?php echo $this->layoutClass()->contentWrapper()?>">
 			<?php echo $this->layout()->content; ?>
 		</div>
 	</div>
