--- a/public/css/tinab.css
+++ b/public/css/tinab.css
@@ -52,6 +52,7 @@ h1, h2, h3, h4 {
 /* @group =classes */
 .hide {display: none;}
 .hidden {visibility: hidden;}
+.clear {clear: both;}
 .align-right {text-align: right;}
 .align-center {text-align: center;}
 /* @end =classes */
@@ -103,6 +104,18 @@ body > header .main-nav ul li.current {
 .content-wrapper {
 	padding: 10px;
 }
+.content-wrapper > header {
+	margin: 0 auto;
+	background-color: #afafaf;
+	padding: 5px 10px;
+	border: 3px solid #aaaaaa;
+}
+.content-wrapper > .content {
+	margin: 0 auto;
+	background-color: #fff;
+	padding: 10px;
+	border: 3px solid #aaaaaa;
+}
 /* @end =page-content */
 /* @group =messenger */
 .messenger {
@@ -122,3 +135,57 @@ body > header .main-nav ul li.current {
 	color: #ff3434;
 }
 /* @end =messenger */
+/* @group =form */
+.error-inline {
+	display: none;
+}
+.form-field {
+	clear: both;
+	margin-bottom: 10px;
+}
+label {
+	float: left;
+	width: 100px;
+	height: 24px;
+}
+.error label {
+	color: #df2323;
+}
+.error .error-inline {
+	color: #df2323;
+	font-size: 10px;
+	margin-left: 100px;
+	display: block;
+}
+.form-field.flip p {
+	float: left;
+	margin-left: 95px;
+}
+.form-field.flip label {
+	float: left;
+	width: 200px;	
+}
+.form-field.flip .error-inline {
+	clear: both;
+}
+form button[type="submit"] {
+	margin-left: 100px;
+	background-color: #afafaf;
+	border: none;
+	padding: 2px 10px;
+}
+form button[type="submit"]:hover {
+	background-color: #bfbfbf;
+}
+/* @end =form */
+/* @group =site-login */
+.login > header {
+	width: 350px;	
+}
+.login > .content {
+	width: 350px;	
+}
+.login form {
+	margin-left: 20px;
+}
+/* @end =site-login */
