~ poprawiony layout i menu główne

--- a/application/views/layouts/default.phtml
+++ b/application/views/layouts/default.phtml
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<header>
+		<h1><a href="/">Tinab</a></h1>
 		<?php echo $this->mainPanel()?>
 	</header>
 	<div class="page-wrapper">
