--- a/application/views/layouts/login.phtml
+++ b/application/views/layouts/login.phtml
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" media="projection, screen" href="/css/tinab.css" />
 </head>
 <body>
+	<header>
+		<h1><a href="/">Tinab</a></h1>
+	</header>
 	<div class="page-wrapper">
 		<?php echo $this->flashMessenger(); ?>
 		<div class="<?php echo $this->layoutClass()->contentWrapper()?>">
