--- a/public/templates/tinab.html
+++ b/public/templates/tinab.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<header>
+		<h1><a href="/">Tinab</a></h1>
 		<div class="main-panel">
 			<ul>
 				<li>deny1@test.pl</li>
@@ -16,13 +17,14 @@
 		</div>
 		<div class="main-nav">
 			<ul>
-				<li class="current"><a href="/">Podsumowanie</a></li>
-				<li><a href="/tasks">Zadania</a></li>
+				<li class="current"><a href="#">Podsumowanie</a></li>
+				<li><a href="#">Zadania</a></li>
+				<li><a href="#">Wiadomości</a></li>
 			</ul>
 		</div>
 	</header>
 	<div class="page-wrapper">
-		<div class="messenger msg-info">
+		<div class="messenger msg-ok">
 			sdasdasdsa
 		</div>
 		<div class="messenger msg-error">
