--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" media="projection, screen" href="/css/tinab.css" />
 </head>
 <body>
+	<header>
+		<h1><a href="/">Tinab</a></h1>
+	</header>
 	<div class="page-wrapper">
 		<div class="messenger msg-ok">
 			sdasdasdsa
