~ adminka do grup

--- a/application/views/layouts/default.phtml
+++ b/application/views/layouts/default.phtml
@@ -16,6 +16,7 @@
 		<?php echo $this->flashMessenger(); ?>
 		<div class="<?php echo $this->layoutClass()->contentWrapper()?>">
 			<?php echo $this->layout()->content; ?>
+			<div class="clear"></div>
 		</div>
 	</div>
 </body>
