--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -3,7 +3,7 @@
 <header>
 	<h2>Logowanie</h2>
 </header>
-<div class="content">
+<div>
 	<form method="post" action="/">
 
 		<?php $sField = 'email';
