--- a/application/views/layouts/login.phtml
+++ b/application/views/layouts/login.phtml
@@ -12,7 +12,9 @@
 	<div class="page-wrapper">
 		<?php echo $this->flashMessenger(); ?>
 		<div class="<?php echo $this->layoutClass()->contentWrapper()?>">
-			<?php echo $this->layout()->content; ?>
+			<div class="content">
+				<?php echo $this->layout()->content; ?>
+			</div>
 		</div>
 	</div>
 </body>
