--- a/public/templates/admin.html
+++ b/public/templates/admin.html
@@ -30,8 +30,25 @@
 		<div class="messenger msg-error">
 			sdasdasdsa
 		</div>
-		<div class="content-wrapper">
-			content
+		<div class="content-wrapper admin">
+			<div class="content">
+				<header>
+					<h2>Administracja</h2>
+				</header>
+				<div>
+					asd
+				</div>
+			</div>
+			<div class="sidebar">
+				<div class="box">
+					<header>
+						<h3>Na skróty</h3>
+					</header>
+					<div class="box-content">
+				asdasd
+					</div>
+				</div>
+			</div>
 			<div class="clear"></div>
 		</div>
 	</div>
