+ dodawanie/usuwanie/edycja grup oraz ich uprawnień

--- a/application/views/layouts/default.phtml
+++ b/application/views/layouts/default.phtml
@@ -5,6 +5,9 @@
 	<meta charset="utf-8" />
 	<link rel="stylesheet" media="projection, screen" href="/css/tinab.css" />
 	<?php echo $this->headLink(); ?>
+
+	<script type="text/javascript" src="/js/plugins/jquery.js"></script>
+	<script type="text/javascript" src="/js/all.js"></script>
 	<?php echo $this->headScript(); ?>
 </head>
 <body>
