--- a/application/views/scripts/app-partials/paginator.phtml
+++ b/application/views/scripts/app-partials/paginator.phtml
@@ -1,6 +1,6 @@
 <?php
 
-$sInitText = empty($this->initText) ? 'Przeglądaj: ' : $this->initText . ' ';
+$sInitText = empty($this->initText) ? 'Strona: ' : $this->initText . ' ';
 
 if($this->pageCount > 1)
 {
