+ dodana adminka dla userów

--- a/application/views/scripts/administration/index.phtml
+++ b/application/views/scripts/administration/index.phtml
@@ -9,7 +9,7 @@
 			<h4>Użytkownicy</h4>
 			<p>
 				Tutaj utworzysz konta nowym użytkownikom, przydzielisz ich do wybranych grup, zbanujesz wybrane konta, usuniesz konta
-				<a href="#">przejdź &#187;</a>
+				<a href="/administration/users">przejdź &#187;</a>
 			</p>
 		</article>
 		<article>
