+ adminka do edycji grup głównych userów

--- a/application/views/layouts/login.phtml
+++ b/application/views/layouts/login.phtml
@@ -10,8 +10,8 @@
 		<h1><a href="/">Tinab</a></h1>
 	</header>
 	<div class="page-wrapper">
-		<?php echo $this->flashMessenger(); ?>
-		<div class="<?php echo $this->layoutClass()->contentWrapper()?>">
+		<?php echo $this->layout_FlashMessenger(); ?>
+		<div class="<?php echo $this->layout_Class()->contentWrapper()?>">
 			<div class="content">
 				<?php echo $this->layout()->content; ?>
 			</div>
