--- a/application/views/scripts/administration/groups.phtml
+++ b/application/views/scripts/administration/groups.phtml
@@ -1,4 +1,4 @@
-<?php $this->layoutClass()->contentWrapper('admin')?>
+<?php $this->layout_Class()->contentWrapper('admin')?>
 
 <div class="content">
 	<header class="menu">
@@ -41,4 +41,4 @@
 		);?>
 	</div>
 </div>
-<?php echo $this->sidebarAdmin()?>
+<?php echo $this->sidebar_Admin()?>
