--- a/public/css/tinab.css
+++ b/public/css/tinab.css
@@ -192,7 +192,7 @@ label {
 	margin-left: 100px;
 	display: block;
 }
-.form-field.flip p {
+.form-field.flip span {
 	float: left;
 	margin-left: 95px;
 }
@@ -215,6 +215,22 @@ form button[type="submit"]:hover {
 form .multi p > label {
 	width: auto;
 	float: none;
+}
+form .formMultiChoose {
+	height: 150px;
+}
+form .formMultiChoose select {
+	float: left;
+	height: 100%;
+}
+form .formMultiChoose .multiButtons {
+	float: left;
+	height: 100%;
+	padding-left: 15px;
+	width: 45px;
+}
+form .formMultiChoose .multiButtons button {
+	margin-top: 10px;
 }
 /* @end =form */
 /* @group =site-login */
