--- a/application/views/layouts/default.phtml
+++ b/application/views/layouts/default.phtml
@@ -13,11 +13,11 @@
 <body>
 	<header>
 		<h1><a href="/">Tinab</a></h1>
-		<?php echo $this->mainPanel()?>
+		<?php echo $this->layout_MainPanel()?>
 	</header>
 	<div class="page-wrapper">
-		<?php echo $this->flashMessenger(); ?>
-		<div class="<?php echo $this->layoutClass()->contentWrapper()?>">
+		<?php echo $this->layout_FlashMessenger(); ?>
+		<div class="<?php echo $this->layout_Class()->contentWrapper()?>">
 			<?php echo $this->layout()->content; ?>
 			<div class="clear"></div>
 		</div>
