--- a/application/views/scripts/administration/index.phtml
+++ b/application/views/scripts/administration/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->layoutClass()->contentWrapper('admin')?>
+<?php $this->layout_Class()->contentWrapper('admin')?>
 
 <div class="content">
 	<header>
@@ -29,4 +29,4 @@
 		</article>
 	</div>
 </div>
-<?php echo $this->sidebarAdmin()?>
+<?php echo $this->sidebar_Admin()?>
