~ dodana adminka do zarządzania userami w wybranej grupie

--- a/application/views/scripts/administration/groups-form.phtml
+++ b/application/views/scripts/administration/groups-form.phtml
@@ -24,7 +24,7 @@
 			echo $this->form_Field(
 				'uprawnienia',
 				$sField,
-				$this->form_MultiCheckbox($sField, $this->form_Value($sField), array(), Privileges::getGlobal()),
+				$this->form_MultiChoose($sField, $this->form_Value($sField), array(), Privileges::getGlobal()),
 				array('class' => 'multi')
 			)?>
 
