--- a/application/views/scripts/administration/groups.phtml
+++ b/application/views/scripts/administration/groups.phtml
@@ -21,8 +21,7 @@
 				<?php echo implode(', ', $this->privilegesDesc($oItem->getPrivileges()))?>
 			</p>
 			<p>
-				<a href="#">zobacz użytkowników</a> |
-				<a href="#">dodaj użytkownika</a> |
+				<a href="/administration/groups-users/id/<?php echo $oItem->getId() ?>">edytuj użytkowników</a> |
 				<a href="/administration/groups-edit/id/<?php echo $oItem->getId() ?>">edytuj grupę</a> |
 				<a href="#/administration/groups-delete/id/<?php echo $oItem->getId() ?>" class="confirm" data-confirm="Czy na pewno chcesz usunąć tą grupę?">usuń grupę</a>
 			</p>
