~ poprawione tworzenie projektu (dodane tworzenie niezbędnych grup)

--- a/application/modules/administration/views/users/index.phtml
+++ b/application/modules/administration/views/users/index.phtml
@@ -17,7 +17,7 @@
 				<?php echo $this->userStatus($oItem)?>
 				<br />
 				<strong>grupy:</strong>
-				<?php echo mb_strtolower(implode(', ', $oItem->getGlobalGroups()), 'UTF-8')?>
+				<?php echo mb_strtolower(implode(', ', $oItem->getGroups()), 'UTF-8')?>
 			</p>
 			<p>
 				<a href="/administration/users/groups/id/<?php echo $oItem->getId() ?>">edytuj grupy</a> |
