~ wstęp do projektów

--- a/application/modules/administration/views/users/index.phtml
+++ b/application/modules/administration/views/users/index.phtml
@@ -39,7 +39,7 @@
 					array(
 						'pname'		=> 'page',
 						'pcount'	=> 6,
-						'actionUrl'	=> '/administration/userss'
+						'actionUrl'	=> '/administration/users'
 					)
 		);?>
 	</div>
